force-app/main/default/objects/TimeEntry__c/TimeEntry__c.object-meta.xml
<CustomObject>
    <description>Time entries object from Clockify integration, which is integrated with Cases and Accounts</description>
    <label>Time Entry</label>
    <nameField>
        <displayFormat>T-{000000}</displayFormat>
        <label>Time Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>