force-app/main/default/objects/TimeEntry__c/fields/CaseId__c.field-meta.xml
<CustomField>
    <fullName>CaseId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relationship from Case object</description>
    <label>Case ID</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Time Entries</relationshipLabel>
    <relationshipName>Time_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>