force-app/main/default/objects/TimeEntry__c/fields/ClockifyTimeEntryId__c.field-meta.xml
<CustomField>
    <fullName>ClockifyTimeEntryId__c</fullName>
    <description>Clockify Time Entry ID from integration</description>
    <externalId>true</externalId>
    <label>Clockify Time Entry ID</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>