force-app/main/default/objects/TimeEntry__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Field with time entry description to integrate with Clockify</description>
    <label>Description</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>