force-app/main/default/objects/TimeEntry__c/fields/isBillable__c.field-meta.xml
<CustomField>
    <fullName>isBillable__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checkbox to check if the time entry is billable or not. This will reflect on the hours presented to customer and on it&apos;s entitlements</description>
    <label>Billable</label>
    <type>Checkbox</type>
</CustomField>