force-app/main/default/objects/TimeEntry__c/fields/Service_Contract__c.field-meta.xml
<CustomField>
    <fullName>Service_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Contract</label>
    <referenceTo>ServiceContract</referenceTo>
    <relationshipLabel>Time Entries</relationshipLabel>
    <relationshipName>Time_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>