force-app/main/default/objects/TimeEntry__c/fields/Task_Ray_ID__c.field-meta.xml
<CustomField>
    <fullName>Task_Ray_ID__c</fullName>
    <label>Task Ray ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>