force-app/main/default/objects/TimeEntry__c/fields/TrackedMinutes__c.field-meta.xml
<CustomField>
    <fullName>TrackedMinutes__c</fullName>
    <description>Tracked time in minutes</description>
    <formula>TrackedTime__c * 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tracked Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>