force-app/main/default/objects/TimeEntry__c/fields/TrackedTime__c.field-meta.xml
<CustomField>
    <fullName>TrackedTime__c</fullName>
    <description>Time tracked from End Time to Start Time in hours</description>
    <formula>(EndTime__c -  StartTime__c) * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tracked Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>