force-app/main/default/objects/TimeEntry__c/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User IDs from Time Entries</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Time_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>