force-app/main/default/objects/TimeEntry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ClockifyTimeEntryId__c</columns>
    <columns>StartTime__c</columns>
    <columns>EndTime__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>